Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7174

[REG] QLineEdit: When an input mask is set then the cursor will no longer blink

XMLWordPrintable

    • a299057a351b0aff2c961e920839451b67e50f4e, Qt 4.8: b8dd42f52e70ff1c63ec21d1fe0830f34a9e1094, Qt5: a9cda515177db1615f8d47becf2aa781f26955ae

      When an input mask is set on a QLineEdit then the cursor no longer blinks, this is a regression against Qt 4.5.x. To reproduce it use the lineedits example and set an input mask on the input mask lineedit.

        1. 0001-Fixes-a-regression-missing-cursor-blink-when-input-m.patch
          3 kB
          Andreas Aardal Hanssen
        2. 0001-Fixes-a-regression-missing-cursor-blink-when-input-m.patch.qt4
          3 kB
          Andreas Aardal Hanssen
        3. 0001-Fixes-a-regression-missing-cursor-blink-when-input-m.patch.qt5
          5 kB
          Andreas Aardal Hanssen
        4. new_patch.diff
          0.3 kB
          Qt Support
        5. patch.diff
          2 kB
          Andy Shaw (closed Nokia identity)
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            anshaw Andy Shaw (closed Nokia identity) (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes